<resources>
    <string name="app_name">SampleDemoApplication</string>
    <string name="txt_login">Login</string>
    <string name="txt_username">UserName</string>
    <string name="txt_password">Password</string>
    <string name="txt_or">Or</string>
    <string name="txt_signIn">Sign In</string>
    <string name="txt_signUp">Sign Up</string>
    <string name="txt_welcome">WelCome</string>
    <string name="txt_register">Register</string>
    <string name="txt_add">Add Details</string>
    <string name="txt_edit">Edit Details</string>
    <string name="txt_hint_name">Enter UserName</string>
    <string name="txt_hint_email">Enter Email</string>
    <string name="txt_hint_pass">Enter Password</string>
    <string name="txt_hint_pNO">Enter Phone Number</string>
    <string name="txt_phoneNo">Phone Number</string>
    <string name="txt_addUser">Add User Info</string>
    <string name="alertmsg">Do you want to Logout?</string>
    <string name="txt_click">Click Here !!</string>
    <string name="txt_addInfo">Add User Information</string>
    <string name="txt_editInfo">Edit User Information</string>
    <string name="txt_addUser1">Add Users Information like(Username, PhoneNumber, Email, Image) here.</string>
</resources>