<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <FrameLayout
            android:id="@+id/frameView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_circle">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_person" />

        </FrameLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/frameView"
            android:background="@color/txt_hint_color" />

        <TextView
            android:id="@+id/idTVUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toLeftOf="@id/idIVDelete"
            android:layout_toRightOf="@+id/frameView"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/txt_username"
            android:textColor="@color/txt_color"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/idTVPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVUserName"
            android:layout_marginStart="5dp"
            android:layout_toLeftOf="@id/idIVDelete"
            android:layout_toRightOf="@+id/frameView"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/txt_phoneNo"
            android:textColor="@color/txt_color"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/idTVEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVPhoneNo"
            android:layout_marginStart="5dp"
            android:layout_toLeftOf="@id/idIVDelete"
            android:layout_toRightOf="@+id/frameView"
            android:padding="5dp"
            android:text="@string/txt_hint_email"
            android:textColor="@color/txt_color"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/idIVEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:background="@drawable/button_circle"
            android:padding="3dp"
            android:src="@drawable/ic_edit" />

        <ImageView
            android:id="@+id/idIVDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idIVEdit"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_circle"
            android:padding="3dp"
            android:src="@drawable/ic_delete" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
